# hy-nrepl

./: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing-threading.hy  todo.org  workspace.hy
.gemini/: settings.json
.github/workflows/: hy_nrepl_test.yaml  hyrepl_test.yaml  release.yaml
HyREPL/: bencode.hy  ops.hy  server.hy  session.hy  workarounds.hy
HyREPL/middleware/: complete.hy  eval.hy  info.hy
HyREPL/middleware/test/: __init__.hy
HyREPL/ops/: __init__.hy  clone.hy  close.hy  completions.hy  describe.hy  eval.hy  lookup.hy  ls_sessions.hy  stdin.hy  utils.hy
hy_nrepl/: client.hy  mcp_server.py  server.hy
hy_nrepl/ops/: eval.hy
tests/: bencode.hy  defop.hy  integration_tests.hy  lookup_module.hy  session_registry.hy  test_mcp_server.py  tests.hy
tests.bak/: tests.hy
tests.bak/middleware/: eval.hy
tests/middleware/: eval.hy
tests/ops/: completions.hy  defop.hy  eval.hy  lookup.hy  sample_module.hy  sample_python_module.py  session_ops.hy  stdin.hy
